--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
   <p>© {{ if eq now.Year 2017 }}2017{{ else }}2017-{{ now.Year }}{{ end }} {{ .Site.Title }}</p>
   <p>Powered by <a href="https://gohugo.io/" target="_blank">Hugo</a> with theme <a href="https://github.com/laozhu/hugo-nuo" target="_blank">Nuo</a>.</p>
   {{ if and (isset .Site.Params "icp") (ne .Site.Params.ICP "") }}
-    <p><a href="http://www.xlking.co" title="Check ICP info" target="_blank">{{ .Site.Params.ICP }}</a></p>
+    <p><a href="http://www.xlking.com" title="Check ICP info" target="_blank">{{ .Site.Params.ICP }}</a></p>
   {{ end }}
 </footer>
 
